tests/mm0_mmu/fail/bad-sort3.mmu
(sort s9 free pure sort)